--- a/readme
+++ b/readme
@@ -1,6 +1,9 @@
 I explained the stages step by step:
 1-run the httpserver (codes which has been uploaded in java) on ECLIPS and export it as a jarfile (Httpserver9090.jar).
-Note: the name of the image should be exactly as written above unless it doesn't work.
+Note: the name of the image should be exactly
+A-as Httpserver9090.jar
+B- also in the program mentiond folder (jar) unless it doesn't work.
+
 2-buid the container. 
 3-now the httpserver is built and run on top of Docker.
 4-by using lttng+tracecompass you are able to compare CPU and memory(RAM) on your PC in this scenario.
