--- a/readme
+++ b/readme
@@ -1,6 +1,7 @@
 I explained the stages step by step:
 1-run the httpserver (codes which has been uploaded in java) on ECLIPS and export it as a jarfile (Httpserver9090.jar).
-Note: the name of the image should be exactly
+Note1: I put some computatins (e.g. calculating random integers) to increase CPU loads on the httpserver.
+Note2: the name of the image should be exactly
 A-as Httpserver9090.jar
 B- also in the program mentiond folder (jar) unless it doesn't work.
 
